syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.apache.openwhisk.grpc";

package activation;

service QueueService {
    rpc Fetch (stream WindowAdvertisement) returns (stream FetchActivationResponse) {
    }

    rpc Put (Activation) returns (PutActivationResponse) {
    }

    rpc Create (CreateQueueRequest) returns (CreateQueueResponse) {
    }
}

message Activation {
    string actionName = 2;
    string body = 3;
}

message TransactionId {
    string id = 1;
}

message PutActivationResponse {
    ResponseStatus status = 1;
}

message ResponseStatus {
    int32 statusCode = 1;
    string message = 2;
}

message WindowAdvertisement {
    oneof message {
        string actionName = 1;
        int32 windowsSize = 2;
    }
}

message FetchActivationResponse {
    ResponseStatus status = 1;
    Activation activation = 2;
}

message CreateQueueRequest {
    TransactionId tid = 1;
    string actionName = 2;
}

message CreateQueueResponse {
    ResponseStatus status = 1;
    string endpoint = 2;
}